# yamcl

./: .gitignore  README.md  package.json  pnpm-lock.yaml  shell.nix  svelte.config.js  vite.config.js
.direnv/: nix-profile-.3667.87edbd74246  nix-profile-.3667.87edbd74246.rc
.github/workflows/: build-dev.yml  tauri.yml
src/: app.css  app.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth_structs.rs  authentication.rs  instances.rs  main.rs  minecraft.rs
src-tauri/src/authentication/: accounts.rs  auth.rs  auth_structs.rs
src-tauri/src/configuration/: accounts.rs  settings.rs
src-tauri/src/minecraft/: instances.rs  java.rs  launching.rs  libraries.rs  modloaders.rs  versions.rs
src-tauri/src/minecraft/authentication/: auth.rs
src-tauri/src/minecraft/instances/: curseforge.rs  errors.rs  instances.rs  multimc.rs
src-tauri/src/minecraft/launching/: launching.rs  libraries.rs  manifests.rs  mc_structs.rs  versions.rs
src-tauri/src/minecraft/modloaders/: fabric.rs  forge.rs  forge_installer.rs  modloaders.rs
src/components/: AccountDisplay.svelte  InstanceTile.svelte  LoadingSpinner.svelte  MinecraftList.svelte  NavButton.svelte  Navbar.svelte  Notification.svelte  NotificationContainer.svelte  Topbar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/accounts/: +page.svelte
src/routes/create/: +page.svelte
src/routes/home/: +page.svelte
src/routes/settings/: +page.svelte  filesystem.js  (+1 more)
src/scripts/: accounts.js  instances.js  javas.js  notificationSystem.js  settings.js  typeDefs.js  versions.js
(+1 files in other folders)
