[package]
name = "yamcl"
version = "0.3.0"
description = "Yet Another MC Launcher"
authors = ["dercommander323"]
license = "GPL-3.0-only"
repository = "https://github.com/DerCommander323/yamcl"
default-run = "yamcl"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "dialog-confirm", "dialog-ask", "dialog-message", "dialog-save", "dialog-open", "fs-create-dir", "fs-read-file", "fs-exists", "fs-write-file", "shell-open", "path-all", "protocol-asset"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
log = "0.4.20"
simple_logger = "4.2.0"
configparser = "3.0.2"
afire = "2.2.1"
fastrand = "2.0.0"
sha1_smol = "1.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
